--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "devDependencies": {
-    "typescript": "^5.7.3"
+    "@eslint/js": "^9.19.0",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.21.0"
   },
   "scripts": {
     "build": "tsc"
