--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
+    "prettier": "3.4.2",
     "react": "^19.0.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0"
