--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "compilerOptions":
-    {
-      "target": "es2022",
-      "outDir": "dist",
-      "sourceMap": true,
-    },
+  "compilerOptions": {
+    "target": "es2022",
+    "outDir": "dist",
+    "sourceMap": true
+  },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules"]
 }
