--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/jasmine": "^5.1.5",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
+    "jasmine": "^5.5.0",
     "prettier": "3.4.2",
     "react": "^19.0.0",
     "typescript": "^5.7.3",
@@ -11,5 +13,6 @@
   },
   "scripts": {
     "build": "tsc"
-  }
+  },
+  "type": "module"
 }
