--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "dist",
     "sourceMap": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "spec/**/*.ts"],
   "exclude": ["node_modules"]
 }
