--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@eslint/js": "^9.19.0",
     "@types/jasmine": "^5.1.5",
     "eslint": "^9.19.0",
+    "eslint-plugin-jsdoc": "^50.6.3",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
     "jasmine": "^5.5.0",
